--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/usuario
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://database-2.c7rf7ulz408y.us-east-1.rds.amazonaws.com:3306/usuario
+spring.datasource.username=admin
+spring.datasource.password=admin12345
 
 
