--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,17 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.5.0</version>
+		</dependency>
+
 
 	</dependencies>
 
